solutions/virtualservice-2.5s-delay-solution.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        end-user:
          exact: swisscom
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 2.5s
    route:
    - destination:
        host: ratings
        subset: alpha
  - route:
    - destination:
        host: ratings
        subset: alpha
