solutions/virtualservice-swisscom-solution.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: swisscom
    route:
    - destination:
        host: reviews
        subset: black
  - route:
    - destination:
        host: reviews
        subset: none
