solutions/virtualservice-weight-solution.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: none
      weight: 70
    - destination:
        host: reviews
        subset: black
      weight: 30
